--- a/style.css
+++ b/style.css
@@ -1,3 +1,20 @@
+body {
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
+}
+
 .vertical-spacing {
   height: 2vh;
+}
+
+.centralizr-io {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  text-align: center;
+}
+
+.horizontalify {
+  margin: 0 auto;
 }
