--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   height: 100vh;
   width: 100vw;
-  overflow: hidden;
+  overflow-x: hidden;
   background: linear-gradient(135deg, #BBE7E7, #C3FECA);
   color: #370507;
   font-size: 2rem;
@@ -42,4 +42,10 @@ a:hover {
 
 .horizontalify {
   margin: 0 auto;
+}
+
+.step-map-expansion {
+ width: 300px;
+ height: 300px;
+ margin: 20px auto;
 }
