--- a/style.css
+++ b/style.css
@@ -44,8 +44,14 @@ a:hover {
   margin: 0 auto;
 }
 
-.step-map-expansion {
- width: 300px;
- height: 300px;
+.results-view {
+  padding-bottom: 50px;
+}
+
+.step-instructions-img {
+ max-width: 400px;
+ display: block;
+ width: 100%;
+ height: auto;
  margin: 20px auto;
 }
