--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 body {
-  height: 100vh;
-  width: 100vw;
   overflow-x: hidden;
   background: linear-gradient(135deg, #BBE7E7, #C3FECA);
   color: #370507;
   font-size: 2rem;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 a {
@@ -26,7 +26,7 @@ a:hover {
   border: none;
   color: #FFF;
   padding: 2rem;
-  font-size: 4rem;
+  font-size: 3.5rem;
 }
 
 .btn-spoons:hover {
